[package]
name = "rmap"
version = "0.1.0"
edition = "2021"

[lib]
name = "rmap"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
clap = "4.0"
cidr = "0.3.1"
ipnetwork = "0.21.1"
regex = "1.11.1"
rand = "0.8"

[package.metadata.maturin]
name = "rmap"
